--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
       <input required name="password" type="password" placeholder="비밀번호" />
       <input type="submit" value="Log In" />
       <a href="#">Find Account or Password</a>
-      <a href="">Continue with Github</a>
+      <a href="github/start">Continue with Github</a>
     </form>
 
     <script
