--- a/post.html
+++ b/post.html
@@ -11,6 +11,8 @@
       content="upgrade-insecure-requests"
     />
 
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon" />
 
